--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^16.3.1",
     "react-test-renderer": "^16.3.1",
     "shallow-equal-fuzzy": "0.0.2",
+    "sinon": "^4.5.0",
     "typescript": "^2.6.1",
     "underscore": "^1.8.3"
   },
