--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "fast-deep-equal": "^1.1.0",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
+    "karma-safari-launcher": "^1.0.0",
     "karma-webpack": "^3.0.0",
     "lodash": "^4.17.4",
     "mocha": "^3.4.2",
