--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Fastest deep equal comparison for React. Perfect for shouldComponentUpdate. Also really fast general-purpose deep comparison",
   "main": "index.js",
   "scripts": {
+    "preversion": "npm run test",
     "benchmark": "node benchmark",
-    "eslint": "eslint *.js benchmark spec",
-    "test-spec-watch": "mocha spec/*.spec.js -R spec --watch",
-    "test-spec": "mocha spec/*.spec.js -R spec",
-    "test-cov": "nyc npm run test-spec",
+    "eslint": "eslint \"*.js\" benchmark test",
+    "test-browser": "karma start test/browser/karma.conf.js",
+    "test-browser-ie": "karma start test/browser/karma.conf.ie.js",
+    "test-node": "mocha \"test/node/*.spec.js\"",
+    "test-node-cov": "nyc npm run test-node",
     "test-ts": "tsc --target ES5 --noImplicitAny index.d.ts",
-    "test": "npm run eslint && npm run test-ts && npm run test-cov"
+    "test": "builder concurrent --buffer eslint test-ts test-node-cov test-browser",
+    "test-ie": "builder concurrent --buffer eslint test-ts test-node-cov test-browser-ie"
   },
   "repository": {
     "type": "git",
@@ -31,10 +34,23 @@
   },
   "homepage": "https://github.com/FormidableLabs/react-fast-compare",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "benchmark": "^2.1.4",
+    "builder": "^4.0.0",
+    "core-js": "^2.5.5",
     "coveralls": "^2.13.1",
     "eslint": "^4.0.0",
     "fast-deep-equal": "^1.1.0",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-webpack": "^3.0.0",
     "lodash": "^4.17.4",
     "mocha": "^3.4.2",
     "nano-equal": "^1.0.1",
@@ -43,11 +59,12 @@
     "react-test-renderer": "^16.3.1",
     "shallow-equal-fuzzy": "0.0.2",
     "sinon": "^4.5.0",
-    "typescript": "^2.6.1"
+    "typescript": "^2.6.1",
+    "webpack": "^4.5.0"
   },
   "nyc": {
     "exclude": [
-      "**/spec/**",
+      "**/test/**",
       "node_modules"
     ],
     "reporter": [
