Update benchmarking dependencies

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "core-js": "^2.5.5",
     "coveralls": "^2.13.1",
     "eslint": "^4.0.0",
-    "fast-deep-equal": "^1.1.0",
+    "fast-deep-equal": "2.0.1",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
@@ -51,9 +51,9 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-safari-launcher": "^1.0.0",
     "karma-webpack": "^3.0.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
     "mocha": "^3.4.2",
-    "nano-equal": "^1.0.1",
+    "nano-equal": "^2.0.2",
     "nyc": "^11.0.2",
     "react": "^16.3.1",
     "react-test-renderer": "^16.3.1",
