--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -23,3 +23,6 @@ rules:
   no-use-before-define: [ 2, nofunc ]
   callback-return: 2
   no-path-concat: 2
+globals:
+  document: false
+  Element: false
