Add esm support
In this diff I converted the lib to esm and bundled it to cjs and esm
with rollup.

Modern bundlers will consume `module` by default.

It may be considered as minor change.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "react-fast-compare",
   "version": "2.0.4",
   "description": "Fastest deep equal comparison for React. Perfect for shouldComponentUpdate. Also really fast general-purpose deep comparison",
-  "main": "index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "scripts": {
-    "preversion": "npm run test",
+    "build:cjs": "rollup -i index.js -o dist/index.cjs.js -f cjs",
+    "build:esm": "rollup -i index.js -o dist/index.esm.js -f esm",
+    "build": "npm run build:cjs && npm run build:esm",
+    "preversion": "npm run test && npm run build",
     "benchmark": "node benchmark",
     "eslint": "eslint \"*.js\" benchmark test",
     "test-browser": "karma start test/browser/karma.conf.js",
@@ -57,6 +61,7 @@
     "nyc": "^11.0.2",
     "react": "^16.3.1",
     "react-test-renderer": "^16.3.1",
+    "rollup": "^0.67.4",
     "shallow-equal-fuzzy": "0.0.2",
     "sinon": "^4.5.0",
     "typescript": "^2.6.1",
