--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "Fastest deep equal comparison for React. Perfect for shouldComponentUpdate. Also really fast general-purpose deep comparison",
   "main": "index.js",
   "scripts": {
-    "preversion": "npm run test",
+    "preversion": "yarn test",
     "benchmark": "node benchmark",
     "eslint": "eslint \"*.js\" benchmark test",
     "test-browser": "karma start test/browser/karma.conf.js",
     "test-browser-ie": "karma start test/browser/karma.conf.ie.js",
     "test-node": "mocha \"test/node/*.spec.js\"",
-    "test-node-cov": "nyc npm run test-node",
+    "test-node-cov": "nyc yarn test-node",
     "test-ts": "tsc --target ES5 --noImplicitAny index.d.ts",
     "test": "builder concurrent --buffer eslint test-ts test-node-cov test-browser",
-    "test-ie": "builder concurrent --buffer eslint test-ts test-node-cov test-browser-ie"
+    "test-ie": "builder concurrent --buffer eslint test-ts test-node-cov test-browser-ie",
+    "compress": "terser --compress --mangle=\"toplevel:true\" -- index.js",
+    "size-min-gz": "yarn -s compress | gzip -9 | wc -c"
   },
   "repository": {
     "type": "git",
@@ -34,32 +36,34 @@
   },
   "homepage": "https://github.com/FormidableLabs/react-fast-compare",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "babel-loader": "^8.0.6",
     "benchmark": "^2.1.4",
-    "builder": "^4.0.0",
-    "core-js": "^2.5.5",
-    "coveralls": "^2.13.1",
-    "eslint": "^4.0.0",
-    "fast-deep-equal": "2.0.1",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
+    "builder": "^5.0.0",
+    "core-js": "^3.5.0",
+    "coveralls": "^3.0.9",
+    "eslint": "^6.7.2",
+    "fast-deep-equal": "3.1.1",
+    "fast-deep-equal-git": "epoberezkin/fast-deep-equal#v3.1.1",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-safari-launcher": "^1.0.0",
-    "karma-webpack": "^3.0.0",
+    "karma-webpack": "^4.0.2",
     "lodash": "^4.17.10",
-    "mocha": "^3.4.2",
+    "mocha": "^6.2.2",
     "nano-equal": "^2.0.2",
-    "nyc": "^11.0.2",
+    "nyc": "^14.1.1",
     "react": "^16.3.1",
     "react-test-renderer": "^16.3.1",
     "shallow-equal-fuzzy": "0.0.2",
-    "sinon": "^4.5.0",
-    "typescript": "^2.6.1",
+    "sinon": "^7.5.0",
+    "terser": "^4.4.3",
+    "typescript": "^3.7.3",
     "webpack": "^4.5.0"
   },
   "nyc": {
