--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
+    "@testing-library/dom": "^7.3.0",
+    "@testing-library/preact": "^1.0.2",
     "babel-loader": "^8.0.6",
     "benchmark": "^2.1.4",
     "builder": "^5.0.0",
@@ -46,6 +48,8 @@
     "eslint": "^6.7.2",
     "fast-deep-equal": "3.1.1",
     "fast-deep-equal-git": "epoberezkin/fast-deep-equal#v3.1.1",
+    "jsdom": "^16.2.2",
+    "jsdom-global": "^3.0.2",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.1.0",
@@ -58,8 +62,9 @@
     "mocha": "^6.2.2",
     "nano-equal": "^2.0.2",
     "nyc": "^14.1.1",
+    "preact": "^10.4.1",
     "react": "^16.3.1",
-    "react-test-renderer": "^16.3.1",
+    "react-test-renderer": "^16.13.1",
     "shallow-equal-fuzzy": "0.0.2",
     "sinon": "^7.5.0",
     "terser": "^4.4.3",
