Switch to codecov

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "babel-loader": "^8.0.6",
     "benchmark": "^2.1.4",
     "builder": "^5.0.0",
+    "codecov": "^3.6.5",
     "core-js": "^3.5.0",
-    "coveralls": "^3.0.9",
     "eslint": "^6.7.2",
     "fast-deep-equal": "3.1.1",
     "fast-deep-equal-git": "epoberezkin/fast-deep-equal#v3.1.1",
