Add test for Preact support (#75)
* Mimic existing React tests for Preact, update deps

* Test cleanup / PR feedback

* Tie React-specific checks together

* Testing yarn lock changes

* Focus on supporting preact/compat, revert index chng

* Drop support for node@8

* Fix node coverage

* Transpile preact for ie tests

* Bump CI versions

* Fix win ci

* Switch to codecov

Co-authored-by: Ryan Roemer <ryan.roemer@formidable.com>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test-browser": "karma start test/browser/karma.conf.js",
     "test-browser-ie": "karma start test/browser/karma.conf.ie.js",
     "test-node": "mocha \"test/node/*.spec.js\"",
-    "test-node-cov": "nyc yarn test-node",
+    "test-node-cov": "nyc mocha \"test/node/*.spec.js\"",
     "test-ts": "tsc --target ES5 --noImplicitAny index.d.ts",
     "test": "builder concurrent --buffer eslint test-ts test-node-cov test-browser",
     "test-ie": "builder concurrent --buffer eslint test-ts test-node-cov test-browser-ie",
@@ -38,14 +38,18 @@
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
+    "@testing-library/dom": "^7.5.1",
+    "@testing-library/preact": "^1.0.2",
     "babel-loader": "^8.0.6",
     "benchmark": "^2.1.4",
     "builder": "^5.0.0",
+    "codecov": "^3.6.5",
     "core-js": "^3.5.0",
-    "coveralls": "^3.0.9",
     "eslint": "^6.7.2",
     "fast-deep-equal": "3.1.1",
     "fast-deep-equal-git": "epoberezkin/fast-deep-equal#v3.1.1",
+    "jsdom": "^16.2.2",
+    "jsdom-global": "^3.0.2",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.1.0",
@@ -58,8 +62,9 @@
     "mocha": "^6.2.2",
     "nano-equal": "^2.0.2",
     "nyc": "^14.1.1",
+    "preact": "^10.4.1",
     "react": "^16.3.1",
-    "react-test-renderer": "^16.3.1",
+    "react-test-renderer": "^16.13.1",
     "shallow-equal-fuzzy": "0.0.2",
     "sinon": "^7.5.0",
     "terser": "^4.4.3",
