--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,9 @@ dist: trusty
 language: node_js
 
 node_js:
-  - "8"
   - "10"
   - "12"
-  - "13"
+  - "14"
 
 branches:
   only:
@@ -30,7 +29,7 @@ script:
   - yarn run test
 
 after_script:
-  - coveralls < coverage/lcov.info
+  - yarn codecov
 
 cache:
   yarn: true
