--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "preversion": "yarn test",
     "benchmark": "node benchmark",
-    "eslint": "eslint \"*.js\" benchmark test",
+    "eslint": "eslint \"*.js\" \"*.ts\" benchmark test",
     "test-browser": "karma start test/browser/karma.conf.js",
     "test-browser-ie": "karma start test/browser/karma.conf.ie.js",
     "test-node": "mocha \"test/node/*.spec.js\"",
     "test-node-cov": "nyc yarn test-node",
-    "test-ts": "tsc --p test/typescript/index.ts",
-    "test-tsc": "tsc --target ES5 --noImplicitAny index.d.ts",
-    "test": "builder concurrent --buffer eslint test-tsc test-ts test-node-cov test-browser",
-    "test-ie": "builder concurrent --buffer eslint test-tsc -test-ts test-node-cov test-browser-ie",
+    "test-ts-types": "tsc --p test/typescript/index.ts",
+    "test-ts-usage": "tsc --target ES5 --noImplicitAny index.d.ts",
+    "test": "builder concurrent --buffer eslint test-ts-usage test-ts-types test-node-cov test-browser",
+    "test-ie": "builder concurrent --buffer eslint test-ts-usage test-ts-types test-node-cov test-browser-ie",
     "compress": "terser --compress --mangle=\"toplevel:true\" -- index.js",
     "size-min-gz": "yarn -s compress | gzip -9 | wc -c"
   },
@@ -41,6 +41,8 @@
     "@babel/preset-env": "^7.7.6",
     "@testing-library/dom": "^7.5.1",
     "@testing-library/preact": "^1.0.2",
+    "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
     "babel-loader": "^8.0.6",
     "benchmark": "^2.1.4",
     "builder": "^5.0.0",
@@ -65,6 +67,7 @@
     "nyc": "^14.1.1",
     "preact": "^10.4.1",
     "react": "^16.3.1",
+    "react-redux": "^7.2.0",
     "react-test-renderer": "^16.13.1",
     "shallow-equal-fuzzy": "0.0.2",
     "sinon": "^7.5.0",
