--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "test-browser-ie": "karma start test/browser/karma.conf.ie.js",
     "test-node": "mocha \"test/node/*.spec.js\"",
     "test-node-cov": "nyc yarn test-node",
-    "test-ts-types": "tsc --p test/typescript/index.ts",
-    "test-ts-usage": "tsc --target ES5 --noImplicitAny index.d.ts",
-    "test": "builder concurrent --buffer eslint test-ts-usage test-ts-types test-node-cov test-browser",
-    "test-ie": "builder concurrent --buffer eslint test-ts-usage test-ts-types test-node-cov test-browser-ie",
+    "test-ts-usage": "tsc --jsx react --target ES6 --noImplicitAny --esModuleInterop typescript/index.tsx",
+    "test-ts-defs": "tsc --target ES5 --noImplicitAny index.d.ts",
+    "test": "builder concurrent --buffer eslint test-ts-usage test-ts-defs test-node-cov test-browser",
+    "test-ie": "builder concurrent --buffer eslint test-ts-usage test-ts-defs test-node-cov test-browser-ie",
     "compress": "terser --compress --mangle=\"toplevel:true\" -- index.js",
     "size-min-gz": "yarn -s compress | gzip -9 | wc -c"
   },
@@ -43,6 +43,7 @@
     "@testing-library/preact": "^1.0.2",
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
+    "@types/react-redux": "^7.1.8",
     "babel-loader": "^8.0.6",
     "benchmark": "^2.1.4",
     "builder": "^5.0.0",
@@ -69,6 +70,7 @@
     "react": "^16.3.1",
     "react-redux": "^7.2.0",
     "react-test-renderer": "^16.13.1",
+    "redux": "^4.0.5",
     "shallow-equal-fuzzy": "0.0.2",
     "sinon": "^7.5.0",
     "terser": "^4.4.3",
