--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test-browser-ie": "karma start test/browser/karma.conf.ie.js",
     "test-node": "mocha \"test/node/*.spec.js\"",
     "test-node-cov": "nyc yarn test-node",
-    "test-ts-usage": "tsc --jsx react --target ES6 --noImplicitAny --esModuleInterop typescript/index.tsx",
-    "test-ts-defs": "tsc --target ES5 --noImplicitAny index.d.ts",
+    "test-ts-usage": "tsc test/typescript/index.tsx",
+    "test-ts-defs": "tsc --target ES5 index.d.ts",
     "test": "builder concurrent --buffer eslint test-ts-usage test-ts-defs test-node-cov test-browser",
     "test-ie": "builder concurrent --buffer eslint test-ts-usage test-ts-defs test-node-cov test-browser-ie",
     "compress": "terser --compress --mangle=\"toplevel:true\" -- index.js",
