keep breaking things

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "preversion": "yarn test",
     "benchmark": "node benchmark",
-    "eslint": "eslint \"*.js\" \"*.ts\" benchmark test",
+    "eslint": "eslint \"*.js\" benchmark test",
+    "tslint": "eslint test/typescript/index.tsx",
     "test-browser": "karma start test/browser/karma.conf.js",
     "test-browser-ie": "karma start test/browser/karma.conf.ie.js",
     "test-node": "mocha \"test/node/*.spec.js\"",
     "test-node-cov": "nyc yarn test-node",
-    "test-ts-usage": "tsc test/typescript/index.tsx",
+    "test-ts-usage": "tsc --esModuleInterop --jsx react test/typescript/index.tsx",
     "test-ts-defs": "tsc --target ES5 index.d.ts",
     "test": "builder concurrent --buffer eslint test-ts-usage test-ts-defs test-node-cov test-browser",
     "test-ie": "builder concurrent --buffer eslint test-ts-usage test-ts-defs test-node-cov test-browser-ie",
