--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,13 @@
   "compilerOptions": {
     "noImplicitAny": true
   },
-  "references": [{ "path": "test/typescript" }]
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "references": [{ "path": "test/typescript" }],
+  "parserOptions": {
+    "sourceType": "module"
+  }
 }
