--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-redux": "^7.1.8",
+    "@typescript-eslint/parser": "^2.34.0",
     "babel-loader": "^8.0.6",
     "benchmark": "^2.1.4",
     "builder": "^5.0.0",
