--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@ jspm_packages/
 # Typescript v1 declaration files
 typings/
 
+# Compiled output from Typescript usage test
+test/typescript/*.js
+
 # Optional npm cache directory
 .npm
 
