moar PR feedback

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.1.1",
   "description": "Fastest deep equal comparison for React. Great for React.memo & shouldComponentUpdate. Also really fast general-purpose deep comparison.",
   "main": "index.js",
+  "typings": "index.d.ts",
   "scripts": {
     "preversion": "yarn test",
     "benchmark": "node benchmark",
@@ -12,9 +13,9 @@
     "test-browser-ie": "karma start test/browser/karma.conf.ie.js",
     "test-node": "mocha \"test/node/*.spec.js\"",
     "test-node-cov": "nyc mocha \"test/node/*.spec.js\"",
-    "test-ts-usage": "tsc --esModuleInterop --jsx react --noEmit  test/typescript/sample-usage.tsx",
+    "test-ts-usage": "tsc --esModuleInterop --jsx react --noEmit test/typescript/sample-usage.tsx",
     "test-ts-defs": "tsc --target ES5 index.d.ts",
-    "test": "builder concurrent --buffer eslint test-ts-usage test-ts-defs test-node-cov test-browser",
+    "test": "builder concurrent --buffer eslint test-ts-usage test-ts-defs test-node-cov test-browser test-ie",
     "test-ie": "builder concurrent --buffer eslint test-ts-usage test-ts-defs test-node-cov test-browser-ie",
     "compress": "terser --compress --mangle=\"toplevel:true\" -- index.js",
     "size-min-gz": "yarn -s compress | gzip -9 | wc -c"
@@ -44,7 +45,6 @@
     "@testing-library/preact": "^1.0.2",
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
-    "@types/react-redux": "^7.1.8",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-loader": "^8.0.6",
     "benchmark": "^2.1.4",
@@ -70,9 +70,7 @@
     "nyc": "^14.1.1",
     "preact": "^10.4.1",
     "react": "^16.3.1",
-    "react-redux": "^7.2.0",
     "react-test-renderer": "^16.13.1",
-    "redux": "^4.0.5",
     "shallow-equal-fuzzy": "0.0.2",
     "sinon": "^7.5.0",
     "terser": "^4.4.3",
