--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "codecov": "^3.6.5",
     "core-js": "^3.5.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-react": "^7.20.0",
     "fast-deep-equal": "3.1.1",
     "fast-deep-equal-git": "epoberezkin/fast-deep-equal#v3.1.1",
     "jsdom": "^16.2.2",
