--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@testing-library/preact": "^1.0.2",
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
+    "@types/react-redux": "^7.1.9",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-loader": "^8.0.6",
     "benchmark": "^2.1.4",
@@ -71,7 +72,9 @@
     "nyc": "^14.1.1",
     "preact": "^10.4.1",
     "react": "^16.3.1",
+    "react-redux": "^7.2.0",
     "react-test-renderer": "^16.13.1",
+    "redux": "^4.0.5",
     "shallow-equal-fuzzy": "0.0.2",
     "sinon": "^7.5.0",
     "terser": "^4.4.3",
