Separate react-redux test from main usage test

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "preversion": "yarn test",
     "benchmark": "node benchmark",
     "eslint": "eslint \"*.js\" benchmark test",
-    "tslint": "eslint test/typescript/sample-usage.tsx",
+    "tslint": "eslint test/typescript/*.tsx",
     "test-browser": "karma start test/browser/karma.conf.js",
     "test-browser-ie": "karma start test/browser/karma.conf.ie.js",
     "test-node": "mocha \"test/node/*.spec.js\"",
     "test-node-cov": "nyc mocha \"test/node/*.spec.js\"",
-    "test-ts-usage": "tsc --esModuleInterop --jsx react --noEmit test/typescript/sample-usage.tsx",
+    "test-ts-usage": "tsc --esModuleInterop --jsx react --noEmit test/typescript/*.tsx",
     "test-ts-defs": "tsc --target ES5 index.d.ts",
     "test": "builder concurrent --buffer eslint tslint test-ts-usage test-ts-defs test-node-cov test-browser",
     "test-ie": "builder concurrent --buffer eslint tslint test-ts-usage test-ts-defs test-node-cov test-browser-ie",
@@ -72,6 +72,7 @@
     "nyc": "^14.1.1",
     "preact": "^10.4.1",
     "react": "^16.3.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
