Add react-dom types, test CI

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test-browser-ie": "karma start test/browser/karma.conf.ie.js",
     "test-node": "mocha \"test/node/*.spec.js\"",
     "test-node-cov": "nyc mocha \"test/node/*.spec.js\"",
-    "test-ts-usage": "tsc --esModuleInterop --jsx react --noEmit test/typescript/*.tsx",
+    "test-ts-usage": "tsc --esModuleInterop --jsx react --noEmit test/typescript/sample-react-redux-usage.tsx test/typescript/sample-usage.tsx",
     "test-ts-defs": "tsc --target ES5 index.d.ts",
     "test": "builder concurrent --buffer eslint tslint test-ts-usage test-ts-defs test-node-cov test-browser",
     "test-ie": "builder concurrent --buffer eslint tslint test-ts-usage test-ts-defs test-node-cov test-browser-ie",
@@ -45,6 +45,7 @@
     "@testing-library/preact": "^1.0.2",
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-loader": "^8.0.6",
