--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,2 +1,23 @@
 env:
   es6: true
+  node: true
+rules:
+  block-scoped-var: 2
+  callback-return: 2
+  curly: [2, multi-or-nest, consistent]
+  dot-location: [2, property]
+  dot-notation: 2
+  indent: [2, 2, { SwitchCase: 1 }]
+  linebreak-style: [2, unix]
+  no-else-return: 2
+  no-eq-null: 2
+  no-fallthrough: 2
+  no-path-concat: 2
+  no-return-assign: 2
+  no-trailing-spaces: 2
+  no-unused-vars: [2, { args: none }]
+  no-use-before-define: [2, nofunc]
+  quotes: [2, single, avoid-escape]
+  semi: [2, always]
+  strict: 0
+  valid-jsdoc: [2, { requireReturn: false }]
