--- a/test/.eslintrc.yml
+++ b/test/.eslintrc.yml
@@ -1,3 +1,12 @@
 env:
-  es6: true
   mocha: true
+extends: [ 'eslint:recommended', 'plugin:react/recommended' ]
+parser: '@typescript-eslint/parser'
+parserOptions:
+  sourceType: module
+settings:
+  react:
+    version: detect
+globals:
+  document: false
+  Element: false
