--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -18,6 +18,10 @@ jobs:
           - 16
     name: Node ${{ matrix.node_version }} on ${{ matrix.os }}
     steps:
+      - name: Use LF EOL
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: |
+          git config --global core.autocrlf false
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup node
