--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,16 @@
 ---
-name: Pull Request
+name: Main
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -37,3 +43,17 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           yarn test-ie
+
+  codecov:
+    if: ${{ github.ref == 'refs/heads/master' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+      - name: Test
+        run: |
+          yarn install --frozen-lockfile
+          yarn test
+          yarn codecov
