run full tests with chrome on all OSs and just IE on windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,9 @@ jobs:
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
       - name: Test
-        if: ${{ matrix.os != 'windows-latest' }}
         run: yarn test
       - name: Test IE
         if: ${{ matrix.os == 'windows-latest' }}
-        run: yarn test-ie
+        run: yarn test-browser-ie
       - name: Codecov
         run: yarn codecov
