Update React and webpack dependencies

--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "eslint": "eslint \"*.js\" benchmark test",
     "tslint": "eslint test/typescript/*.tsx",
     "test-browser": "karma start test/browser/karma.conf.js",
-    "test-browser-ie": "karma start test/browser/karma.conf.ie.js",
     "test-node": "mocha \"test/node/*.spec.js\"",
     "test-node-cov": "nyc mocha \"test/node/*.spec.js\"",
     "test-ts-usage": "tsc --esModuleInterop --jsx react --noEmit test/typescript/sample-react-redux-usage.tsx test/typescript/sample-usage.tsx",
     "test-ts-defs": "tsc --target ES5 index.d.ts",
     "test": "builder concurrent --buffer eslint tslint test-ts-usage test-ts-defs test-node-cov test-browser",
-    "test-ie": "builder concurrent --buffer eslint tslint test-ts-usage test-ts-defs test-node-cov test-browser-ie",
     "compress": "terser --compress --mangle=\"toplevel:true\" -- index.js",
     "size-min-gz": "yarn -s compress | gzip -9 | wc -c"
   },
@@ -48,6 +46,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@typescript-eslint/parser": "^2.34.0",
+    "assert": "^2.0.0",
     "babel-loader": "^8.0.6",
     "benchmark": "^2.1.4",
     "builder": "^5.0.0",
@@ -62,26 +61,26 @@
     "karma": "^6.3.14",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.1.0",
-    "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-safari-launcher": "^1.0.0",
-    "karma-webpack": "^4.0.2",
+    "karma-webpack": "^5.0.0",
     "lodash": "^4.17.10",
     "mocha": "^6.2.2",
     "nano-equal": "^2.0.2",
     "nyc": "^14.1.1",
     "preact": "^10.4.1",
-    "react": "^16.3.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-test-renderer": "^16.13.1",
-    "redux": "^4.0.5",
+    "process": "^0.11.10",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
+    "react-test-renderer": "^18.0.0",
+    "redux": "^4.2.0",
     "shallow-equal-fuzzy": "0.0.2",
     "sinon": "^7.5.0",
     "terser": "^4.4.3",
-    "typescript": "^3.7.3",
-    "webpack": "^4.5.0"
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0"
   },
   "nyc": {
     "exclude": [
