--- a/package.json
+++ b/package.json
@@ -84,6 +84,9 @@
     "typescript": "^4.9.5",
     "webpack": "^5.76.0"
   },
+  "publishConfig": {
+    "provenance": true
+  },
   "nyc": {
     "exclude": [
       "**/test/**",
