--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
+          cache: "yarn"
           node-version: ${{ matrix.node_version }}
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
